--- a/chartapp/templates/partial/base.html
+++ b/chartapp/templates/partial/base.html
@@ -12,7 +12,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
     
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.min.js"></script>
     <title>ChartApp</title>
   </head>
   <body>
